--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,8 @@
+@import url(https://fonts.googleapis.com/css?family=Rubik:300,regular,700,900&display=swap&subset=cyrillic-ext);
+
+@import "_icons.scss";
+@import "_variables.scss";
+
 * {
   margin: 0;
   padding: 0;
@@ -5,5 +10,33 @@
 }
 
 body {
-  background-color: #f0f0f0;
+  background-color: $color-gray;
 }
+
+#root {
+  margin: 50px auto;
+  font-family: 'Rubik', 'Arial', 'sans-serif';
+  color: $color-dark;
+}
+
+.app {
+
+  &__header {
+    width: 375px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: $color-orange;
+  }
+
+  &__title {
+    text-align: center;
+    padding-right: 10px;
+  }
+}
+
+@import "_search.scss";
+@import "_weather_card.scss";
+@import "_days_list.scss";
+@import "_day_item.scss";
